--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -5,21 +5,24 @@
 <body>
     <main class="container my-5">
         <div class="row">
-            <div class="col-12 col-sm-9">
+            <div class="col-12 col-md-9">
                 <iframe th:src="@{${urlPdf}}"
                         frameborder="0" height="500px" width="100%"
                         th:classappend="${pdfComprado} ? '' : 'pdf-no-comprado'"></iframe>
-                <form th:action="@{/comprarApunteEnDetalleApunte/{id}(id=${apunte.id})}" method="post">
-
-                    <button id="botonComprar" th:unless="${#lists.contains(apuntesCompradosPorUsuarioActual, apunte) or #lists.contains(apuntesCreadosPorUsuarioActual, apunte)}"
-                            type="submit" class="btn btn-success boton-apunte">Comprar</button>
-                </form>
             </div>
-            <div class="col-12 col-sm-3">
+            <div class="col-12 col-md-3">
                 <h2 th:text="${apunte.nombre}"></h2>
                 <p class="fw-bold">Descripción: <span class="fw-normal" th:text="${apunte.descripcion}"></span></p>
-                <p class="fw-bold">Path: <span class="fw-normal" th:text="${apunte.pathArchivo}"></span></p>
-                <a th:href="@{'/perfilUsuario/' + ${usuarioVendedor.id}}" class="btn btn-primary">Ver perfil y apuntes</a>
+                <p class="fw-bold">Nombre de documento: <span class="fw-normal" th:text="${apunte.pathArchivo}"></span></p>
+
+                <form class="mt-4" th:action="@{/comprarApunteEnDetalleApunte/{id}(id=${apunte.id})}" method="post">
+                    <button id="botonComprar" th:unless="${#lists.contains(apuntesCompradosPorUsuarioActual, apunte) or #lists.contains(apuntesCreadosPorUsuarioActual, apunte)}" type="submit" class="btn btn-success w-100">Comprar</button>
+                </form>
+                <hr class="my-4">
+                <div>
+                    <p class="fw-bold">Vendedor: <span class="fw-normal" th:text="${usuarioVendedor.nombre}"></span></p>
+                    <a th:href="@{'/perfilUsuario/' + ${usuarioVendedor.id}}" class="btn btn-primary">Ver perfil y apuntes</a>
+                </div>
 
             </div>
         </div>
