Secciones del home en carousels

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -1,104 +1,95 @@
 <!DOCTYPE html>
 <div th:insert="~{nav}"></div>
 <body>
-<main class="container">
+<main>
     <!-- Sección de Destacados -->
     <section class="my-5">
-        <h1 class="text-center">Apuntes Destacados</h1>
-        <div class="container">
-            <div class="row">
-                <div th:each="apunte : ${apuntes}" th:if="${apunte.activo}" class="col-12 col-sm-6 col-md-4 col-xl-3">
-                    <div class="card card-home my-2">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between">
-                                <span>
-                                    <h5 th:text="${apunte.nombre}" class="card-title"></h5>
-                                    <h6 class="card-subtitle mb-2 text-muted">Materia</h6>
-                                </span>
-                                <span>
-                                    <h5 th:text="${apunte.precio}" class="card-text"></h5>
-                                </span>
-                                <span>
-                                <a th:href="@{/detalleApunte/{id}(id=${apunte.id})}" class="btn btn-primary">Detalles</a>
-                                </span>
-                            </div>
-                            <div class="apunte-descrip mb-2">
-                                <p th:text="${apunte.descripcion}" class="mb-2"></p>
-                            </div>
-                            <form th:action="@{/comprarApunteEnElHome/{id}(id=${apunte.id})}" method="post">
-
-                                <button id="botonComprar" th:unless="${#lists.contains(apuntesComprados, apunte) or #lists.contains(apuntesCreados, apunte)}"
-                                        type="submit" class="btn btn-success boton-apunte">Comprar</button>
-                            </form>
-
-                        </div>
-                    </div>
-                </div>
-                <p th:if="${error}" style="color: red;" th:text="${error}"></p>
-                <div  th:if="${#lists.isEmpty(apuntes)}" class="col-12">
-                    <div class="card card-home my-2">
-                        <div class="card-body d-flex justify-content-center align-items-center">
-                            <h3 class="text-muted fw-light">Nada para ver</h3>
-                        </div>
-                    </div>
+        <div class="my-2 section-title">
+            <h4 class="text-left m-0">Apuntes Destacados</h4>
+        </div>
+        <div id="apuntesDes"></div>
+        <div th:if="${#lists.isEmpty(apuntes)}" class="section-title">
+            <div class="card card-home my-2">
+                <div class="card-body d-flex justify-content-center align-items-center">
+                    <h3 class="text-muted fw-light">Nada para ver</h3>
                 </div>
             </div>
-            <hr>
         </div>
     </section>
 
     <!-- Sección de Novedades -->
     <section class="my-5">
-        <h1 class="text-center">Novedades</h1>
-        <div class="row">
-            <div th:each="novedad : ${novedades}" class="col-12 col-sm-6 col-md-4 col-xl-3">
-                <div class="card card-home my-2">
-                    <div class="card-body">
-                        <h5 th:text="${novedad.nombre}" class="card-title"></h5>
-                        <div class="apunte-descrip mb-2">
-                            <p  th:text="${novedad.descripcion}" class="mb-2"></p>
-                        </div>
-                        <a class="btn btn-unlam bg-verde-unlam"  th:href="@{/detalleApunte/{id}(id=${novedad.id})}">Ver Novedad</a>
-                        <p class="card-apunte-coins"><img alt="coins" style="height: 32px" th:src="@{/img/coin.png}"> <span th:text="${novedad.precio}"></span></p>
-                    </div>
-                </div>
-            </div>
-            <div  th:if="${#lists.isEmpty(novedades)}" class="col-12">
-                <div class="card card-home my-2">
-                    <div class="card-body d-flex justify-content-center align-items-center">
-                        <h3 class="text-muted fw-light">Nada para ver</h3>
-                    </div>
+        <div class="my-2 section-title">
+            <h4 class="text-left m-0">Novedades</h4>
+        </div>
+        <div id="novedades"></div>
+        <div th:if="${#lists.isEmpty(novedades)}" class="section-title">
+            <div class="card card-home my-2">
+                <div class="card-body d-flex justify-content-center align-items-center">
+                    <h3 class="text-muted fw-light">Nada para ver</h3>
                 </div>
             </div>
         </div>
-        <hr>
     </section>
 
+    <!-- Sección de Usuarios Destacados -->
     <section class="my-5">
-        <h1 class="text-center">Usuarios Destacados</h1>
-        <div class="row">
-            <div th:each="usuario : ${usuariosDestacados}" class="col-md-4 text-center mb-2">
-                <div class="card d-flex align-items-center p-2">
-                    <img th:src="@{'/img/' + ${usuario.fotoPerfil}}" alt="Foto de perfil" width="150" height="150">
-                    <div class="card-body">
-                        <h5 class="card-title" th:text="${usuario.nombre}"></h5>
-                        <p class="card-text" th:text="${usuario.email}"></p>
-                        <a th:href="@{'/perfilUsuario/' + ${usuario.id}}" class="btn btn-primary">Ver perfil y apuntes</a>
-                    </div>
-                </div>
-            </div>
-            <div  th:if="${#lists.isEmpty(usuariosDestacados)}" class="col-12">
-                <div class="card card-home my-2">
-                    <div class="card-body d-flex justify-content-center align-items-center">
-                        <h3 class="text-muted fw-light">Nada para ver</h3>
-                    </div>
+        <div class="my-2 section-title">
+            <h4 class="text-left m-0">Usuarios Destacados</h4>
+        </div>
+        <div id="usuariosDes"></div>
+        <div th:if="${#lists.isEmpty(usuariosDestacados)}" class="section-title">
+            <div class="card card-home my-2">
+                <div class="card-body d-flex justify-content-center align-items-center">
+                    <h3 class="text-muted fw-light">Nada para ver</h3>
                 </div>
             </div>
         </div>
     </section>
 </main>
 
+<template id="template-card">
+    <div id="card-base">
+        <div class="card card-home my-2">
+            <div class="card-body">
+                <h5 id="apunte-nombre" class="card-title"></h5> <!-- apunte.nombre -->
+                <div class="apunte-descrip mb-2">
+                    <p id="apunte-descripcion" class="mb-2"></p> <!-- apunte.descripcion -->
+                </div>
+                <a class="btn btn-unlam bg-verde-unlam btn-sm">Ver Detalle</a> <!-- href="/detalleApunte/${apunte.id} -->
+                <p class="card-apunte-coins">
+                    <img alt="coins" style="height: 32px" th:src="@{/img/coin.png}"><span id="apunte-precio"></span> <!-- apunte.precio -->
+                </p>
+            </div>
+        </div>
+    </div>
+</template>
+<template id="template-carousel">
+    <div id="carousel-id" class="carousel slide" data-ride="carousel" data-interval="false">
+        <div class="carousel-inner" style="padding: 0px 10%;">
+        </div>
+        <button class="carousel-control-prev" type="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Siguiente</span>
+        </button>
+    </div>
+</template>
+
 <footer class="bg-dark text-light text-center py-3">
     <p>&copy; Derechos - Privacidad - Etc.</p>
 </footer>
 </body>
+
+<script th:inline="javascript">
+/*<![CDATA[*/
+    var apuntesDesData = /*[[${apuntes}]]*/ null;
+    var novedadesData = /*[[${novedades}]]*/ null;
+    var usuariosDesData = /*[[${usuariosDestacados}]]*/ null;
+/*]]>*/
+</script>
+
+<script th:src="@{/js/home.js}"></script>
