Modal de codigo de creador (no volver a mostrar)

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -87,27 +87,44 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Título del Pop-up</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Bienvenido <span th:text="${usuario.nombre}"></span> al Ecommerce de apuntes de  la UNLAM</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>Contenido del pop-up aquí...</p>
+                <p>
+                    ¡Comparte tu código de creador y gana puntos juntos!
+                </p>
+                <ol>
+                    <li>Dirígete a la esquina superior derecha de la pantalla.</li>
+                    <li>Presiona sobre tu nombre de usuario.</li>
+                    <li>En el despegable que se abrirá, encontrarás tu código de creador. Clickea en él para copiarlo y poder compartirlo con tus amigos.</li>
+                </ol>
+                <p>
+                    Invita a tus amigos a registrarse utilizando tu código de creador y ambos recibirán 50 puntos.
+                </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <!-- Puedes agregar más botones aquí si es necesario -->
+                <button type="button" class="btn btn-unlam bg-verde-unlam btn-sm" id="noMostrarBtn">Cerrar y no volver a mostrar</button>
             </div>
         </div>
     </div>
 </div>
 
+
 <script>
-    // Muestra el pop-up cuando la página se carga
     document.addEventListener('DOMContentLoaded', function () {
-        const myModal = new bootstrap.Modal(document.getElementById('myModal'), {
+        const modal = new bootstrap.Modal(document.getElementById('myModal'), {
             keyboard: false
         });
-        myModal.show();
+
+        if (localStorage.getItem('noMostrarModal') !== 'true') {
+            modal.show();
+        }
+
+        document.getElementById('noMostrarBtn').addEventListener('click', function () {
+            localStorage.setItem('noMostrarModal', 'true');
+            modal.hide();
+        });
     });
 </script>
 </body>
