--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <hr >
-        <div class="container w-100 mb-2" th:if="${!hayResena}">
+        <div class="container w-100 mb-2" th:if="${!hayResena && tipoDeAcceso}">
             <form id="formularioResena" class="form-control row d-inline-flex align-items-center" method="POST" th:object="${resena}">
                 <div class="col-sm-8 col-10" >
                     <textarea class="form-control" th:field="*{descripcion}" id="descripcion" rows="2" required></textarea>
