Arregla cards de Apuntes de perfil y detalles visuales en botones

--- a/src/main/webapp/WEB-INF/views/thymeleaf/altaApunte.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/altaApunte.html
@@ -54,7 +54,7 @@
 
             <div th:if="${error}" class="error-message text-danger" th:text="${error}"></div>
 
-            <button type="submit" class="btn btn-primary">Registrar Apunte</button>
+            <button type="submit" class="btn btn-primary mt-2">Registrar Apunte</button>
         </form>
     </div>
 </main>
