--- a/src/main/webapp/WEB-INF/views/thymeleaf/altaCarrera.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/altaCarrera.html
@@ -12,7 +12,7 @@
             <div th:if="${#fields.hasErrors('descripcion')}" class="text-danger">
                 <p th:errors="*{descripcion}"></p>
             </div>
-            <button type="submit" class="btn btn-primary">Registrar Carrera</button>
+            <button type="submit" class="btn btn-primary mt-2">Registrar Carrera</button>
         </form>
     </div>
 </main>
