--- a/src/main/webapp/WEB-INF/views/thymeleaf/altaMateria.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/altaMateria.html
@@ -19,7 +19,7 @@
                     <option th:each="carrera : ${listaCarreras}" th:value="${carrera.id}" th:text="${carrera.descripcion}"></option>
                 </select>
             </div>
-            <button type="submit" class="btn btn-primary">Registrar Materia</button>
+            <button type="submit" class="btn btn-primary mt-2">Registrar Materia</button>
         </form>
     </div>
 </main>
