--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -59,10 +59,10 @@
 
         <div class="container w-100 mb-2" th:if="${!hayResena && tipoDeAcceso}">
             <form id="formularioResena" class="form-control row d-inline-flex align-items-center" method="POST" th:object="${resena}">
-                <div class="col-sm-8 col-10" >
+                <div class="col-8" >
                     <textarea class="form-control" th:field="*{descripcion}" id="descripcion" rows="2" required></textarea>
                 </div>
-                <div class="col-2">
+                <div class="col-4 col-lg-2">
                     <select class="form-select" id="cantidadDeEstrellas" name="cantidadDeEstrellas" th:field="*{cantidadDeEstrellas}" required>
                         <option value="1">1 - Muy Malo</option>
                         <option value="2">2 - Malo</option>
@@ -72,7 +72,7 @@
                     </select>
                 </div>
 
-                <div class="col-2">
+                <div class="mt-2 mt-lg-0 col-12 col-lg-2">
                     <input type="submit" class="btn btn-primary" value="Agregar Reseña" />
                 </div>
             </form>
