--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
@@ -2,23 +2,27 @@
 <div th:insert="~{nav}"></div>
 <body>
     <div class="container">
+        <h2>Apuntes creados por <span th:text="${usuario.nombre}"></span></h2>
         <div class="row">
-            <h2>Apuntes creados por <span th:text="${usuario.nombre}"></span></h2>
-            <div th:each="apunte : ${apuntesCreados}" th:if="${apunte.activo}" class="card my-2" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 th:text="${apunte.nombre}" class="card-title"></h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Materia</h6>
-                    <p th:text="${apunte.descripcion}" class="card-text" style="height: 6rem;"></p>
-                    <p th:text="${apunte.precio}" class="card-text" style="height: 6rem;"></p>
-                    <a th:href="@{/detalleApunte/{id}(id=${apunte.id})}" class="btn btn-primary">Detalles</a>
-                    <form th:action="@{/comprarApuntePorPerfil/{id}(id=${apunte.id})}" method="post">
-
-                        <button id="botonComprar" th:unless="${#lists.contains(apuntesCompradosPorUsuarioActual, apunte) or #lists.contains(apuntesCreadosPorUsuarioActual, apunte)}"
-                                type="submit" class="btn btn-success boton-apunte">Comprar</button>
-                    </form>
+            <div th:each="apunte : ${apuntesCreados}" th:if="${apunte.activo}"  class="col-12 col-sm-6 col-md-4 col-xl-3">
+                <div class="card card-home my-2">
+                    <div class="card-body">
+                        <h5 th:text="${apunte.nombre}" class="card-title"></h5>
+                        <div class="apunte-descrip mb-2">
+                            <p  th:text="${apunte.descripcion}" class="mb-2"></p>
+                        </div>
+                        <div class="d-flex boton-apunte">
+                            <a class="btn bg-verde-unlam btn-sm" th:href="@{/detalleApunte/{id}(id=${apunte.id})}">Mas Info</a>
+                            <form th:action="@{/comprarApuntePorPerfil/{id}(id=${apunte.id})}" method="POST" style="margin-left: 4px;">
+                                <button id="botonComprar" 
+                                th:unless="${#lists.contains(apuntesCompradosPorUsuarioActual, apunte) or #lists.contains(apuntesCreadosPorUsuarioActual, apunte)}"
+                                type="submit" class="btn btn-success btn-sm" title="Comprar apunte"><i class="fa-solid fa-shopping-cart"></i></button>
+                            </form>
+                        </div>
+                        <p class="d-inline-block card-apunte-coins"><img alt="coins" style="height: 32px" th:src="@{/img/coin.png}"> <span th:text="${apunte.precio}"></span></p>
+                    </div>
                 </div>
             </div>
-            <p th:if="${error}" style="color: red;" th:text="${error}"></p>
         </div>
     </div>
 </body>
