--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -82,6 +82,36 @@
         <p id="error" style="color: red;"></p>
     </main>
 </body>
+<footer class="text-light text-center py-3 footer">
+    <div class="container">
+        <div class="row justify-content-center align-items-stretch text-center">
+            <!-- Columna 1: Datos de contacto -->
+            <div class="col-md-4 mb-3 d-flex flex-column align-items-start">
+                <h5>Contacto</h5>
+                <p class="mb-2"> <i class="fa-solid fa-phone" style="color: #8edc86; font-size: 22px; margin-right: 5px;"></i> (123) 4531-0912</p>
+                <p class=" mb-2"> <i class="fa-regular fa-envelope" style="color: #8edc86; font-size: 22px; margin-right: 5px;"></i> apuntesunlam@gmail.com </p>
+            </div>
+
+            <!-- Columna 2: Redes sociales -->
+            <div class="col-md-4 mb-3 d-flex flex-column align-items-start">
+                <h5>Redes Sociales</h5>
+
+                <p class="mb-2"><i class="fa-brands fa-square-facebook" style="color: #8edc86; font-size: 22px; margin-right: 5px;"></i> https://www.facebook.com/unlamapuntes</p>
+                <p class="mb-2"><i class="fa-brands fa-x-twitter" style="color: #8edc86; font-size: 22px; margin-right: 5px;"></i>https://twitter.com/unlamapuntes</p>
+                <p><i class="fa-brands fa-instagram" style="color: #8edc86; font-size: 22px; margin-right: 5px;"></i>https://instagram.com/unlamapuntes</p>
+            </div>
+
+            <div class="col-md-4 mb-3 d-flex flex-column align-items-start">
+                <h5>UNLAM</h5>
+                <p class="mb-2"><img th:src="@{'/img/unlamlogo.png'}" alt="Logo Unlam" width="26" height="26" style="margin-right: 5px;">https://www.unlam.edu.ar</p>
+                <p class="mb-2"><img th:src="@{'/img/unlamlogo.png'}" alt="Logo Unlam" width="26" height="26" style="margin-right: 5px;">https://alumno2.unlam.edu.ar</p>
+                <p><img th:src="@{'/img/miel.unlam.edu.ar.ico'}" alt="Logo Miel" width="26" height="26" style="margin-right: 5px;">https://miel.unlam.edu.ar</p>
+            </div>
+        </div>
+    </div>
+    <p class="mt-3" style="justify-content: center">&copy; UnlamApuntes V2.1.0. Todos los derechos reservados.</p>
+</footer>
+
 
 <script th:inline="javascript">
     $(document).ready(function () {
